# ultrahdr-image-generator-apple

./: LICENSE  README.md  project_management.md
.cursor/rules/: proj_management.mdc  swiftui.mdc
UltraHDRCore/: CMakeLists.txt
UltraHDRCore/Sources/Wrapper/: UltraHDRWrapper.cpp  UltraHDRWrapper.h  UltraHDRWrapper.mm  UltraHDRWrapperObjC.h
UltraHDRGenerator/ultrahdr-image-generator.xcodeproj/: project.pbxproj
UltraHDRGenerator/ultrahdr-image-generator/Sources/: App.swift
UltraHDRGenerator/ultrahdr-image-generator/Sources/Controllers/: UltraHDRGeneratorController.swift
UltraHDRGenerator/ultrahdr-image-generator/Sources/Models/: ImageAcquisition.swift  UltraHDRImageProcessor.swift
UltraHDRGenerator/ultrahdr-image-generator/Sources/Views/: ContentView.swift
UltraHDRGenerator/ultrahdr-image-generatorTests/: ultrahdr_image_generatorTests.swift
ultrahdr-image-generator/ultrahdr-image-generator/: ContentView.swift  ultrahdr_image_generatorApp.swift
ultrahdr-image-generator/ultrahdr-image-generatorUITests/: ultrahdr_image_generatorUITests.swift  ultrahdr_image_generatorUITestsLaunchTests.swift
